--- a/internal/config/testdata/valid/types/User.yaml
+++ b/internal/config/testdata/valid/types/User.yaml
@@ -1,10 +1,11 @@
 entities:
   User:
-    definition:
-      id:
+    spec:
+      identifier:
         field: id
       file_patterns:
         - data/users/*.yaml
+        - data/users/*.json
       fields:
         id:
           type: string
