--- a/internal/validation/testdata/reference_error/mergeway.yaml
+++ b/internal/validation/testdata/reference_error/mergeway.yaml
@@ -1,21 +1,18 @@
 version: 1
 entities:
   User:
-    definition:
-      id:
-        field: id
+    spec:
       file_patterns:
-        - data/users/*.yaml
+      - data/users/*.yaml
       fields:
         id:
           type: string
           required: true
+      identifier: id
   Post:
-    definition:
-      id:
-        field: id
+    spec:
       file_patterns:
-        - data/posts/*.yaml
+      - data/posts/*.yaml
       fields:
         id:
           type: string
@@ -26,13 +23,13 @@ entities:
         tags:
           type: Tag
           repeated: true
+      identifier: id
   Tag:
-    definition:
-      id:
-        field: id
+    spec:
       file_patterns:
-        - data/tags/*.yaml
+      - data/tags/*.yaml
       fields:
         id:
           type: string
           required: true
+      identifier: id
