--- a/examples/full/types/Post.yaml
+++ b/examples/full/types/Post.yaml
@@ -1,10 +1,8 @@
 entities:
   Post:
-    definition:
-      id:
-        field: id
+    spec:
       file_patterns:
-        - data/posts/*.yaml
+      - data/posts/*.yaml
       fields:
         id:
           type: string
@@ -20,3 +18,4 @@ entities:
           repeated: true
         body:
           type: string
+      identifier: id
