--- a/internal/config/testdata/unknown_reference/mergeway.yaml
+++ b/internal/config/testdata/unknown_reference/mergeway.yaml
@@ -1,13 +1,12 @@
 version: 1
 entities:
   Post:
-    definition:
-      id:
-        field: id
+    spec:
       file_patterns:
-        - data/posts/*.yaml
+      - data/posts/*.yaml
       fields:
         id:
           type: string
         author:
           type: User
+      identifier: id
