--- a/internal/validation/testdata/schema_error/mergeway.yaml
+++ b/internal/validation/testdata/schema_error/mergeway.yaml
@@ -1,11 +1,9 @@
 version: 1
 entities:
   User:
-    definition:
-      id:
-        field: id
+    spec:
       file_patterns:
-        - data/users/*.yaml
+      - data/users/*.yaml
       fields:
         id:
           type: string
@@ -13,12 +11,11 @@ entities:
         name:
           type: string
           required: true
+      identifier: id
   Post:
-    definition:
-      id:
-        field: id
+    spec:
       file_patterns:
-        - data/posts/*.yaml
+      - data/posts/*.yaml
       fields:
         id:
           type: string
@@ -32,12 +29,12 @@ entities:
         tags:
           type: Tag
           repeated: true
+      identifier: id
   Tag:
-    definition:
-      id:
-        field: id
+    spec:
       file_patterns:
-        - data/tags/*.yaml
+      - data/tags/*.yaml
       fields:
         id:
           type: string
+      identifier: id
