--- a/internal/validation/testdata/schema_error/mergeway.yaml
+++ b/internal/validation/testdata/schema_error/mergeway.yaml
@@ -1,7 +1,7 @@
 version: 1
 entities:
   User:
-    file_patterns:
+    include:
       - data/users/*.yaml
     fields:
       id:
@@ -12,7 +12,7 @@ entities:
         required: true
     identifier: id
   Post:
-    file_patterns:
+    include:
       - data/posts/*.yaml
     fields:
       id:
@@ -29,7 +29,7 @@ entities:
         repeated: true
     identifier: id
   Tag:
-    file_patterns:
+    include:
       - data/tags/*.yaml
     fields:
       id:
