Define objects inline

--- a/internal/config/testdata/valid/types/Tag.yaml
+++ b/internal/config/testdata/valid/types/Tag.yaml
@@ -10,3 +10,6 @@ entities:
         type: string
         required: true
     identifier: id
+    data:
+      - id: Tag-Inline
+        label: Inline Tag
