Add description fields to entity and field

--- a/examples/full/entities/User.yaml
+++ b/examples/full/entities/User.yaml
@@ -3,6 +3,7 @@ mergeway:
 
 entities:
   User:
+    description: Directory of users who can author and moderate posts
     include:
       - data/users/*.yaml
       - data/users/*.json
@@ -10,13 +11,17 @@ entities:
       id:
         type: string
         required: true
+        description: Stable identifier shared across data files
       name:
         type: string
         required: true
+        description: Display name rendered in UI surfaces
       email:
         type: string
         required: true
+        description: Primary contact address for notifications
       roles:
         type: string
         repeated: true
+        description: Role slugs that drive permission checks
     identifier: id
