Extend full example with extra product tag in a single file

--- a/examples/full/entities/Tag.yaml
+++ b/examples/full/entities/Tag.yaml
@@ -5,7 +5,7 @@ entities:
   Tag:
     description: Controlled vocabulary for categorizing posts
     include:
-      - data/tags/*.yaml
+      - data/tags/product.yaml
     fields:
       id:
         type: string
